--- a/style.css
+++ b/style.css
@@ -154,3 +154,13 @@ textarea{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+input[type=submit]{
+    width: 50%;
+    display: block;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
